--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -63,7 +63,7 @@
                 <span>Location</span>
             </a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="tokendata?.access  !== 'agent'">
             <a class="nav-link" routerLink="/feedback">
                 <i class="fas fa-exchange-alt"></i>
                 <span>FeedBack</span>
