--- a/src/app/dashboard/feedback/feedback.component.html
+++ b/src/app/dashboard/feedback/feedback.component.html
@@ -27,7 +27,7 @@
                         <form class="form-register" [formGroup]="sendMessageForm">
                             <div *ngIf="messageType == 'agent'">
                                 <div class="row">
-                                    <div class="col-4">
+                                    <div class="col-4 mt-4">
                                         <ng-select class="ng-select" [items]="agentList" bindLabel="fullname" [multiple]="true" bindValue="fullname" placeholder="Select Agent" (change)="changeAssignedAgent($event)">
                                         </ng-select>
                                     </div>
@@ -39,7 +39,7 @@
                                         <textarea class="form-control" formControlName="message" placeholder="Text here" style="height: 200px;"></textarea>
                                     </div>
                                 </div>
-                                <div class="row mt-3">
+                                <div class="row mt-2">
                                     <div class="col-12 pull-right">
                                         <button class="btn btn-primary" (click)="sendMessage()">Send Message</button>
                                     </div>
@@ -48,13 +48,20 @@
                             <div *ngIf="messageType == 'nonAgent'">
 
                                 <div class="row">
-                                    <div class="col-4">
+
+                                    <div class="col-4 form-group">
+                                        <div class=""><br> <b>Contact Numbers </b>
+                                            <ng-select [addTag]="addNewContactNumber" [(ngModel)]="contactNumber" [multiple]="true" [ngModelOptions]="{standalone: true}" [items]="contactNumber" bindLabel="contact" bindValue="contact" class="ng-select" placeholder="Enter Contact Numbers" (change)="changeContactNumber($event)">
+                                            </ng-select>
+                                        </div>
+                                    </div>
+                                    <!-- <div class="col-4">
                                         <div class="form-group">
                                             <br> <b class="steps">Contact Number </b>
                                             <input type="number" [(ngModel)]="userContact" class="form-control" formControlName="phone" (change)="newContact($event)" placeholder="92********"></div>
-                                    </div>
+                                    </div> -->
                                 </div>
-                                <div class="row mt-2">
+                                <div class="row mt-1">
                                     <div class="col-4 form-group">
                                         <b class="steps">Message</b>
                                         <label for="exampleFormControlTextarea1"></label>
@@ -64,7 +71,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-12 pull-right">
-                                        <button class="btn btn-primary" (click)="sendMessage()">Send Message</button>
+                                        <button class="btn btn-primary" (click)="sendNonAgentMessage()">Send Message</button>
                                     </div>
                                 </div>
                             </div>
