--- a/src/app/dashboard/feedback/feedback.component.html
+++ b/src/app/dashboard/feedback/feedback.component.html
@@ -17,7 +17,7 @@
                         <div>
 
                             <div class="radio mb-5">
-                                <div class="btn-group btn-group-toggle">
+                                <div class="btn-group btn-group-toggle col-4">
                                     <button [class.active]="messageType === 'agent'" class="btn btn-primary" (click)="setChangeType('agent')">Agent</button>
                                     <button [class.active]="messageType === 'nonAgent'" class="btn btn-primary ml-3" (click)="setChangeType('nonAgent')">Non Agent</button>
 
