--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -7,7 +7,7 @@
             <div class="container-fluid">
 
                 <div class="row">
-                    <div class="col-5 offset-md-1 mb-4 mt-4">
+                    <div class="col-5 ml-5 mb-4 mt-4">
                         <div class="register">
                             <h1 class="h3 mb-5 text-center">Welcome to my asasa</h1>
                             <form class="form-register" [formGroup]="registerForm" (ngSubmit)="registerUser()">
