--- a/src/app/dashboard/both/both.component.html
+++ b/src/app/dashboard/both/both.component.html
@@ -10,8 +10,7 @@
                 <div class="row mb-3 mt-5">
                     <div class="col-12">
                         <button class="btn btn-primary" (click)="setFormTitle('Both')">Add New</button>
-                        <button class="btn btn-secondary ml-3" data-toggle="modal"
-                            data-target="#searchFilterModal">Filter</button>
+                        <button class="btn btn-secondary ml-3" data-toggle="modal" data-target="#searchFilterModal">Filter</button>
                     </div>
                 </div>
                 <div class="row">
@@ -27,7 +26,7 @@
                         </ng-select>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <ng-select class="ng-select inputs2" [items]="locations" bindLabel="location" bindValue="location" placeholder="Select Location" (change)="changeLocation($event)">
+                        <ng-select class="ng-select inputs2" [(ngModel)]="selectedLocation" [items]="locations" bindLabel="location" bindValue="location" placeholder="Select Location" (change)="changeLocation($event)">
                         </ng-select>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-3" *ngIf="currentLoginUser?.access !== 'agent'">
@@ -173,8 +172,7 @@
     </div>
 </div>
 
-<div class="modal fade" id="searchFilterModal" tabindex="-1" role="dialog" aria-labelledby="searchFilterModalLabel"
-    aria-hidden="true">
+<div class="modal fade" id="searchFilterModal" tabindex="-1" role="dialog" aria-labelledby="searchFilterModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -196,15 +194,13 @@
                     <div class="row modal-rows">
                         <div class="col-sm-3 col-md-4">
                             <div class="form-group price">
-                                <input type="number" class="form-control" placeholder="Min Demand"
-                                    formControlName="minPrice">
+                                <input type="number" class="form-control" placeholder="Min Demand" formControlName="minPrice">
                             </div>
                         </div>
 
                         <div class="col-sm-3 col-md-4">
                             <div class="form-group price">
-                                <input type="number" class="form-control" placeholder="Max Demand"
-                                    formControlName="maxPrice">
+                                <input type="number" class="form-control" placeholder="Max Demand" formControlName="maxPrice">
                             </div>
                         </div>
                     </div>
@@ -215,15 +211,13 @@
                     <div class="row modal-rows">
                         <div class="col-sm-3 col-md-4">
                             <div class="form-group date">
-                                <input type="text" onfocus="(this.type='date')" class="form-control"
-                                    placeholder="Start Date" formControlName="startDate">
+                                <input type="text" onfocus="(this.type='date')" class="form-control" placeholder="Start Date" formControlName="startDate">
                             </div>
                         </div>
 
                         <div class="col-sm-3 col-md-4">
                             <div class="form-group date">
-                                <input type="text" onfocus="(this.type='date')" class="form-control"
-                                    placeholder="End Date" formControlName="endDate">
+                                <input type="text" onfocus="(this.type='date')" class="form-control" placeholder="End Date" formControlName="endDate">
                             </div>
                         </div>
                     </div>
@@ -258,8 +252,7 @@
                 <button type="button" class="btn btn-danger reset" data-dismiss="modal" (click)="resetFilters()">
                     <span class="fas fa-undo"></span> Reset
                 </button>
-                <button type="button" class="btn btn-primary filter-button" [disabled]="filterForm.invalid"
-                    data-dismiss="modal" (click)="filter()">
+                <button type="button" class="btn btn-primary filter-button" [disabled]="filterForm.invalid" data-dismiss="modal" (click)="filter()">
                     <span class="fas fa-check"></span>Search
                 </button>
             </div>
