--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -54,19 +54,22 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" routerLink="/location">
-                <i class="fas fa-exchange-alt"></i>
+                <!-- <i class="fas fa-exchange-alt"></i> -->
+                <i class="fas fa-map-signs"></i>
                 <span>Location</span>
             </a>
         </li>
         <li class="nav-item" *ngIf="userData?.access  !== 'agent'">
             <a class="nav-link" routerLink="/feedback">
-                <i class="fas fa-exchange-alt"></i>
+                <!-- <i class="fas fa-exchange-alt"></i> -->
+                <i class="far fa-comments"></i>
                 <span>FeedBack</span>
             </a>
         </li>
         <li class="nav-item" *ngIf="userData?.access  !== 'agent'">
             <a class="nav-link" routerLink="/register">
-                <i class="fas fa-tachometer-alt"></i>
+                <!-- <i class="fas fa-tachometer-alt"></i> -->
+                <i class="fas fa-user-plus"></i>
                 <span>Register</span>
             </a>
         </li>
