--- a/src/app/dashboard/location/add-location/add-location.component.html
+++ b/src/app/dashboard/location/add-location/add-location.component.html
@@ -9,10 +9,10 @@
                 <div class="row">
                     <div class="col-12 col-md-10 mb-4 mt-4">
                         <div *ngIf="changeType == 'location'">
-                            <h2 class="h3 mb-2 text-gray-600 mt-3">Add Location</h2>
+                            <b><h1 class="mb-5 text-gray-600">Add Location</h1></b>
                         </div>
                         <div *ngIf="changeType == 'subLocation'">
-                            <h2 class="h3 mb-2 text-gray-600 mt-3">Add Sub Location</h2>
+                            <h1 class="mb-5 text-gray-600">Add Sub Location</h1>
                         </div>
                         <div>
 
@@ -30,9 +30,9 @@
                                 <div class="row">
 
                                     <div class="col-md-5 col-sm-5 radio-mid">
-                                        <h4 class="mb-2">Select City</h4>
+                                        <b> Select City</b>
 
-                                        <div class="radio">
+                                        <div class="radio mt-2">
                                             <div class="btn-group btn-group-toggle">
                                                 <label class="btn btn-primary" [class.active]="addLocationForm.get('city').value === 'Islamabad'">
                                                     <input type="radio" formControlName="city" value="Islamabad">
@@ -55,14 +55,14 @@
                                 <div class="row mt-3">
                                     <div class="col-4 form-group">
                                         <div class=""><br> <b>Add new Location</b>
-                                            <input formControlName="location" class="form-control" type="text" placeholder="Location " />
+                                            <input formControlName="location" class="form-control mt-2" type="text" placeholder="Location " />
                                         </div>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-4 form-group">
                                         <div class=""><br> <b>Add new Sub Location</b>
-                                            <ng-select [addTag]="addNewSublocation" [(ngModel)]="subLocation" [multiple]="true" [items]="subLocation" bindLabel="subLocation" bindValue="subLocation" [ngModelOptions]="{standalone: true}" class="ng-select" placeholder="Sub-Location" (change)="changeSubLocation($event)">
+                                            <ng-select [addTag]="addNewSublocation" [(ngModel)]="subLocation" [multiple]="true" [items]="subLocation" bindLabel="subLocation" bindValue="subLocation" [ngModelOptions]="{standalone: true}" class="ng-select mt-2" placeholder="Sub-Location" (change)="changeSubLocation($event)">
                                             </ng-select>
                                         </div>
                                     </div>
@@ -88,7 +88,8 @@
                                         </ng-select>
                                     </div>
                                     <div class="col-4">
-                                        <ng-select [addTag]="addNewSublocationUpdation" class="ng-select" [(ngModel)]="subLocationsList" [multiple]="true" [items]="subLocationsList" bindLabel="subLocationsList" bindValue="subLocationsList" [ngModelOptions]="{standalone: true}" placeholder="Sub Locations" (change)="changeSubLocation($event)">
+                                        <ng-select [addTag]="addNewSublocationUpdation" class="ng-select" [(ngModel)]="subLocationsList" [multiple]="true" [items]="subLocationsList" bindLabel="subLocationsList" bindValue="subLocationsList" [ngModelOptions]="{standalone: true}" placeholder="Sub Locations"
+                                            (change)="changeSubLocation($event)">
                                         </ng-select>
                                     </div>
                                 </div>
@@ -103,7 +104,7 @@
                                         </div>
                                     </div>
                                 </div> -->
-                                <div class="row mt-3">
+                                <div class="row mt-5">
 
                                     <div class="col-12 pull-right">
                                         <button class="btn btn-primary" (click)="addSubLocation()">submit</button>
