--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -55,14 +55,17 @@
         <li class="nav-item">
             <a class="nav-link" routerLink="/location">
                 <!-- <i class="fas fa-exchange-alt"></i> -->
-                <i class="fas fa-map-signs"></i>
+                <!-- <i class="fas fa-map-signs"></i> -->
+                <!-- <i class="fas fa-map"></i> -->
+                <i class="far fa-map"></i>
                 <span>Location</span>
             </a>
         </li>
         <li class="nav-item" *ngIf="userData?.access  !== 'agent'">
             <a class="nav-link" routerLink="/dealers-list">
                 <!-- <i class="fas fa-exchange-alt"></i> -->
-                <i class="far fa-comments"></i>
+                <!-- <i class="far fa-comments"></i> -->
+                <i class="far fa-id-card"></i>
                 <span>Dealers List</span>
             </a>
         </li>
